# nfeimport

./: .dockerignore  .gitignore  Dockerfile  LICENSE  Makefile  NFeDBConfig.py  NFeDownloadXML.py  NFeImport.py  NFeKollector.sh  NFeRun-Manual.sh  NFeRun.sh  NFeSQL.py  NFeXML.py  README.md  _dnload.py  config.ini  cronfile  dnlconfig.py  docker-compose-dev.yaml  docker-compose-prod.yaml  docker-compose.override.yaml  docker-compose.prod.yaml  docker-compose.yaml  entrypoint.sh  genrequirements.sh  install.txt  nohup.out  pyproject.toml  requirements.txt
.github/workflows/: docker-image.yaml  docker-image.yml
DEV/: Dockerfile
PROD/: Dockerfile
SQL DDL/: NFe.sql
SQL_DDL/: init.sql  update_28102020.sql  update_29102020.sql
dockerfile/: Dockerfile  Dockerfile-Multi  Dockerfile-slim  slim
log/: readme.txt
logconf/: logging.conf
processed/: readme.txt
xml/: readme.txt
