[tool.poetry]
name = "nfeimport"
version = "4.0.0"
description = "Import NFe from XML to Database"
authors = ["Waldir Borba Junior <wborbajr@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
mysql-connector-python = "^8.0.22"
six = "^1.15.0"
protobuf = "^3.13.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
